# dev-toolbox

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
.husky/: pre-commit
assets/branding/: README.md
docs/: DOCS_INDEX.md
docs/ai/: AI_ARCHITECTURE.md  AI_CODE_REVIEW.md  AI_CONTEXT_GRAPH.md  AI_DECISIONS.md  AI_DEVELOPMENT_RULES.md  AI_OVERVIEW.md  AI_PLUGIN_GUIDE.md  AI_PROMPT_CONVENTION.md  AI_RELEASE.md  AI_UI_GUIDE.md
docs/architecture/: workspace-architecture-v1.md
docs/checklists/: v0.1.0-beta.1-manual-checklist.md
docs/design/: cloud-encrypt-migration-review.md  cloud-encrypt-migration.md  command-palette-v1.md  dashboard-v2.md  design-system-v2.md  design-system.md  icon-generation-v1.md  icon-guidelines-v1.md  interaction-guidelines-v1.md  navigation-v1.md  ui-copy-guidelines.md  ui-guidelines-v1.md  ui-polish-v1.md
docs/development/: tool-development-guidelines.md
docs/platform/: platform-freeze-v1.md
docs/plugin-specs/: base64-spec.md  crypto-spec.md  diff-spec.md  (+12 more)
scripts/: create-plugin.ts  validate-docs.js  validate-plugin-specs.js  validate-tool-layout.js
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: aes_cmd.rs  cloud_cmd.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: cloud_crypto.rs  crypto.rs  mod.rs
(+614 files in other folders)
